# Mixmind

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BRUTAL_HONEST_AUDIT.md  CLAUDE_CODE_TASKS.md  CLAUDE_DESKTOP_RESPONSE.md  CMakeLists.txt  CMakeLists_full.txt  CMakeLists_minimal.txt  COMMERCIAL_DEPLOYMENT_COMPLETE.md  COMPLETED_IMPLEMENTATION_SUMMARY.md  COMPLETE_FIXES_SUMMARY.md  COMPLETE_FIX_LIST.md  COMPLETE_FIX_PLAN.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTRIBUTING.md  CRITICAL_ISSUES_FIXED.md  DEPENDENCY_FIXES_SUCCESS_REPORT.md  FINAL_IMPLEMENTATION_GUIDE.md  FINAL_PRODUCT_DEMO.md  FINAL_SYSTEM_SUMMARY.md  FIX_BUILD_REAL_CODE.md  IMPLEMENTATION_PLAN.md  LICENSE  LICENSING_ISSUE.md  Launch_MixMind_Alpha.bat  MixMind_AI_Professional_Setup.bat  MixMind_Alpha_Demo.bat  MixMind_Professional_Installer.bat  NIRVANA_WORKFLOW_DEMO.md  PRODUCTION_DEPLOYMENT.md  PROFESSIONAL_FEATURES.md  PROJECT_AUDIT_REPORT.md  Quick_Demo.bat  README.md  REALISTIC_FIX_PLAN.md  SECURITY.md  SMART_TRACKTION_FIX.md  SMOKING_GUN_EVIDENCE.md  (+14 more)
.github/: CODEOWNERS  (+2 more)
benchmarks/: CMakeLists.txt  PerformanceBenchmark.cpp  PerformanceBenchmark.h  bench_audio_processing.cpp  bench_midi_processing.cpp
src/: CMakeLists.txt  MixMindApp.cpp  MixMindApp.h  demo_ui_test.cpp  main.cpp  main_minimal.cpp  main_rapid_demo.cpp  rapid_demo_main.cpp
src/adapters/: CMakeLists.txt
src/adapters/tracktion/: CMakeLists.txt  TEAdapter.cpp  TEAdapter.h  TEAutomation.cpp  TEAutomation.h  TEClip.cpp  TEClip.h  TEPlugin.cpp  TEPlugin.h  TEPluginAdapter.cpp  TEPluginAdapter.h  TERenderService.cpp  TERenderService.h  TESession.cpp  TESession.h  TETrack.cpp  TETrack.h  TETransport.cpp  TETransport.h  TEUtils.cpp  TEUtils.h  TEVSTScanner.cpp  TEVSTScanner.h
src/ai/: AIAssistant.cpp  AIAssistant.h  AIAssistantTest.cpp  AITypes.h  ActionAPI.cpp  ActionAPI.h  ActionPipeline.cpp  ActionReducer.cpp  ActionReducer.h  Actions.cpp  Actions.h  CMakeLists.txt  ChatService.cpp  ChatService.h  ContextualAI.h  ConversationContext.h  IntelligentProcessor.cpp  IntelligentProcessor.h  IntentRecognition.cpp  IntentRecognition.h  MixingAssistant.h  MixingIntelligence.h  MusicGenerator.cpp  MusicGenerator.h  MusicKnowledgeBase.cpp  MusicKnowledgeBase.h  OpenAIIntegration.cpp  OpenAIIntegration.h  OpenAIProvider.h  PhraseMappingService.cpp  PhraseMappingService.h  PreferenceLearning.cpp  PreferenceLearning.h  ProactiveMonitor.cpp  ProactiveMonitor.h  Reducer.cpp  Reducer.h  StyleMatcher.cpp  StyleMatcher.h  StyleTransfer.cpp  (+6 more)
src/ai/rapid/: RapidCommandProcessor.h
src/analytics/: Analytics.cpp  Analytics.h  CMakeLists.txt
src/api/: ActionAPI.cpp  ActionAPI.h  ActionSchemas.h  CMakeLists.txt  RESTServer.cpp  RESTServer.h  WebSocketServer.cpp  WebSocketServer.h
src/audio/: AudioEngine.cpp  AudioEngine.h  LUFSNormalizer.cpp  LUFSNormalizer.h  LockFreeBuffer.cpp  LockFreeBuffer.h  MeterProcessor.cpp  MeterProcessor.h  RealtimeAudioEngine.cpp  RealtimeAudioEngine.h  SafeAudioBuffer.h  WAVWriter.cpp  WAVWriter.h
src/audio/generators/: AudioGenerator.cpp  AudioGenerator.h
src/audio/rapid/: RapidAudioEngine.cpp  RapidAudioEngine.h
src/audio/rt/: AudioThreadChecks.h  MessageBus.h  Messages.h  RtAllocator.h  SpscRing.h
src/automation/: AutomationData.cpp  AutomationData.h  AutomationEditor.cpp  AutomationEditor.h  AutomationEngine.cpp  AutomationEngine.h  AutomationRecorder.cpp  AutomationRecorder.h  ParameterAutomation.cpp  ParameterAutomation.h
src/core/: AIThreadPool.cpp  AIThreadPool.h  CMakeLists.txt  CrashReporting.h  IAsyncService.h  IAudioProcessor.h  IAutomation.h  IClip.h  IMediaLibrary.h  IPluginHost.h  IPluginInstance.h  IRenderService.h  ISession.h  ITrack.h  ITransport.h  SecureConfig.cpp  SecureConfig.h  async.cpp  async.h  result.h  types.h
src/demo/: CMakeLists.txt  RealAudioDemo.cpp
src/dsp/: SIMDProcessor.cpp  SIMDProcessor.h
src/engine/: TracktionDAW.h
src/licensing/: CMakeLists.txt  LicenseManager.cpp  LicenseManager.h
src/midi/: CMakeLists.txt  MIDIClip.cpp  MIDIClip.h  MIDIEvent.h  MIDIProcessor.cpp  MIDIProcessor.h
src/mixer/: AudioBus.cpp  AudioBus.h  MixerTypes.h
src/performance/: PerformanceMonitor.cpp  PerformanceMonitor.h
src/plugins/: PluginHost.cpp  PluginHost.h  PluginIntelligence.cpp  PluginIntelligence.h  Quarantine.cpp  Quarantine.h  RealVST3Plugin.cpp  RealVST3Plugin.h  SandboxedPlugin.cpp  SandboxedPlugin.h  UniversalPluginBridge.cpp  UniversalPluginBridge.h  VST3Plugin.cpp  VST3Plugin.h
src/project/: Project.cpp  Project.h  Serialize.cpp  Serialize.h
src/render/: AudioFileWriter.cpp  RenderEngine.cpp  RenderEngine.h  RenderTypes.h
src/services/: CMakeLists.txt  IOSSService.h  KissFFTService.cpp  KissFFTService.h  LibEBU128Service.cpp  LibEBU128Service.h  ONNXService.h  OSCService.cpp  OSCService.h  OSSServiceRegistry.h  RealOpenAIService.cpp  RealOpenAIService.h  SpeechRecognitionService.cpp  SpeechRecognitionService.h  TagLibService.cpp  TagLibService.h  TimeStretchService.cpp  TimeStretchService.h
src/session/: SessionSerializer.h
src/tests/: CMakeLists.txt  TestFramework.h
src/tests/adapters/: TestTEIntegration.cpp
src/tracks/: CMakeLists.txt  InstrumentTrack.cpp  InstrumentTrack.h  TrackTypes.h
src/ui/: AIAssistantPanel.cpp  AIChatWidget.cpp  AIChatWidget.h  AutomationEditor.cpp  CCLaneEditor.cpp  CCLaneEditor.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MixMindMainWindow.cpp  MixMindMainWindow.h  MixerPanel.cpp  PerformanceMonitorPanel.cpp  PianoRollEditor.cpp  PianoRollEditor.h  PianoRollUI.cpp  PianoRollUI.h  PluginManagerUI.cpp  PluginManagerUI.h  PluginRackPanel.cpp  StepSequencer.cpp  StepSequencer.h  Theme.cpp  Theme.h  TransportBar.cpp  TransportBar.h  UIComponents.cpp  UIComponents.h  WebUI.h
src/update/: AutoUpdater.cpp  AutoUpdater.h  CMakeLists.txt
src/vst3/: CMakeLists.txt  RealVST3Scanner.cpp  RealVST3Scanner.h
src/vsti/: CMakeLists.txt  VSTiHost.cpp  VSTiHost.h
test_minimal/: CMakeLists.txt  minimal_test.cpp  simple_test.cpp  test_main.cpp
tests/e2e/: CMakeLists.txt  test_real_vst3.cpp  test_vst3.cpp  test_vst3_simple.cpp
(+148 files in other folders)
